Fixed alignment issues on connect page, now everything is centered when full sized and in mobile mode.

--- a/styles/links.css
+++ b/styles/links.css
@@ -38,8 +38,8 @@
 
 #emailIcon {
     color: gray;
-    margin-left: 47%;
-    margin-right: 50%;
+    text-align: center;
+    width: 100%;
 }
 
 #emailIcon:hover {
@@ -48,8 +48,8 @@
 
 #githubIcon {
     color: gray;
-    margin-left: 47%;
-    margin-right: 50%;
+    text-align: center;
+    width: 100%;
 }
 
 #githubIcon:hover {
@@ -58,8 +58,8 @@
 
 #stackIcon {
     color: gray;
-    margin-left: 47%;
-    margin-right: 50%;
+    text-align: center;
+    width: 100%;
 }
 
 #stackIcon:hover {
