--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,6 @@ nav ul a {
 }
 
 .largeBox {
-    width: 100%;
     margin: 1em;
     float: center;
 }
